--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,3 +36,8 @@ body {
 h2 {
         font-size: 3rem;
 }
+@media (max-width: 425px) {
+        h2 {
+                font-size: 2.5rem;
+        }
+}
