--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,6 +35,9 @@ html.lock {
 .button {
         @apply py-4 px-5 bg-highlight text-white font-semibold hover:opacity-90 transition-all max-md:ml-auto z-20 max-xs:py-2 max-xs:px-2.5 inline-block;
 }
+.hidescroll::-webkit-scrollbar {
+        display: none;
+}
 body {
         color: var(--color-chinese);
         font-size: var(--text-lg);
